@@ -6,10 +6,12 @@ DIST gitlab-workhorse-1.4.3.tar.bz2 655746 SHA256 5b621887aa8b6c0cb1b5b1aae6edd4
 DIST gitlab-workhorse-2.0.0.tar.bz2 656360 SHA256 4e9864b7885b1102d9eb18e9c4bd3baf6021b4d3b64adbf5e9ba70b49aea8d8b SHA512 f439affafc54a090f105897de3ee5fcf2864c26dfd5f87299097c6827b9563f5ec0f7ebc9b1abfc90d6f88f864a640620c58b8a004aa230789ea5e27cf3a2e4c WHIRLPOOL a8488fcb95d06f88eef01e7d1f045fcab766c439738e44fb523b5198d29531b230bd8a1ac27e53fc668a0ba034773cf44477fce623489afe268be9b110ad04f3
 DIST gitlab-workhorse-2.1.1.tar.bz2 658851 SHA256 ab827cfa89f5d3e711357a0317a022b4d5db4d91c01ad0b80b56120e315da899 SHA512 6a316647faff83352c344cc36ef7fbaf327dfab9b8f893c39e22d4cde7e78fe703680d2851663953ee94b3ac9f55a142b5380ed23f26a7600044a3af2fdea08f WHIRLPOOL abded7f69b1a1ddc1aed3f8a8b1ddae89aa19eaa67ac1be1847f3ad6a0f5a23142f60fee545a358ecf27f2b15d4630eb42ea0b68a7076af9e26ee36d9db1243e
 DIST gitlab-workhorse-2.3.0.tar.bz2 673735 SHA256 61dc7ea978223a56e5f2e4617195e43c9e3179f0057e416545060143ea90ae0e SHA512 290713086d8c30fbbc80d32b6924368ceffceb08fc9330403250b775bab20454d5843bfd7b37c1d88fa60d1bebd5b14d7e8bb6b3557142b56b1d9ab02ce46aee WHIRLPOOL a1507a68c06d7335e5fdae4cbb91b01ddcc9d7c988758fd892676c6a78c9746c6f1fa89fe369efdd2352f85c7dade00554263e1a969ce10dfc87983c3136bf6f
+DIST gitlab-workhorse-3.0.0.tar.bz2 678497 SHA256 6a72db70a49c4004881b4e5e727ac088e6b976144466b1e7a5362eb720bcb546 SHA512 25be040a20948a2e82e56e531ed030174a7c0dead542b998a70213aeed4a565eebc6e206fed202d52c538781f25715b93c5dd9708171addb222d13be4c49bb55 WHIRLPOOL 07d3d17bf1d7318fce000fbd8da4d4d8f47040b3ac92efe955ae84ccc9636eb0d8a86816b59caf717848340f53b43d0724bb577d143e2a4524a24eea5e48e33a
 EBUILD gitlab-workhorse-1.4.2.ebuild 1019 SHA256 12e00f04075eb815e41640f4ca906ce1aaa833104e79c43f19c1a34c4454ce2c SHA512 8b430448c28ea695502f08928626f628657d58582439c3458370a56dc134c108c24f266a3fe2353b1ecd5082d2e53b985fa998b8919b60f81836579c884555e3 WHIRLPOOL ff37a454aa77734d4cd15b6bc4181a5dc8f1ead2d03710fdc59a514cbaa0a67202ded330021f2c6f763797763b8de94e2ffe86c90cba2336903479abcdfc3437
 EBUILD gitlab-workhorse-1.4.3.ebuild 1019 SHA256 9f04f9b9a1af3b6a14af32fc27143ef98cf8d5ea297c754e2af2f75faab90cf9 SHA512 f38aee3ae9318d4db08a6f5bf55a7d25944ca65d132f23e5638e670a31745381d93a39d9489409ee75de943edf80af555638b2748d3eb7b1b8b0d65d8c02d6e7 WHIRLPOOL 60491062d73591e137a7a6d6875174a7f7c31c6972d104c2dd856ef8513276617e1be97f18679853b86638d92ba87152ca5b3f17c43dee79db2918e3e3139584
 EBUILD gitlab-workhorse-2.0.0.ebuild 1019 SHA256 6b5b1af7f4bb91d6f38b5160ea4a1711392ba42ae296388c72ceeb1e19dabf99 SHA512 aa607720a13052e2fa5e086d3f5fa2bac42dc9a1028940c6c42e9307596439bb89f6405d23a8f2c216ff9a15e2d83be373adddb6598ed84b7b00af872cd8efc3 WHIRLPOOL 9cd700793dbad67c8a88bf7794bc1273e809b8435702c4359b12c25006fa1a08c8d5963ab76ac75bd46d520442b3195a79659718f8c7bca49d7fb5b4c0d9d6b1
 EBUILD gitlab-workhorse-2.1.1.ebuild 1019 SHA256 0b119e55032bf471921e9011cb3a119b45a78000eae87d9ef28b2c314e302793 SHA512 aa571922dec9bf71d48b0ab23356642bf031328fc18c99600221fff5931259a2127e50432e1fd30c8656dec2ec8fa395d8e15c34f65f2a005c08420f26bcf54b WHIRLPOOL daa44b0fc118f2c05b38ddaf96c78aee1a25993c35ec5a71f4647d95ccfc8cd20362de9e6c9331d531ecd81799733953aef4297c1350d4fd223d9b003e75ab04
 EBUILD gitlab-workhorse-2.3.0.ebuild 1019 SHA256 1e7b0b9f7ca61afbdbb525eecb934a858be6bd91ff7ef6614eed2899f207fc8b SHA512 ec98e6aa09ba6245195fa4666fa4174a9ba595922f351dd660c161f419e84dd2c284373a310b55acf986082d175e1659e9396a9c7a3cc324a540b7d67222aaa6 WHIRLPOOL ba7bb5b5a333161bc4a3b04cd00f97893e9e93e63ee505b97d757676520cbbd06d2616be69a248ac81ea3135589fb3f11cd4333f266e1fa293890982d790399e
-MISC ChangeLog 7167 SHA256 75e7796530a68aa3913c5881952a701430189d0d54ae89157f8b9fc7fc7ea810 SHA512 bb14554af2c2f4efa9d701bec4722be0034a053ad3ba5a391ac4425dd072541f511e7dfb37b8ba2d79fa6a60300c75620cd1f19d9a31461246c91a4f44d229b5 WHIRLPOOL c4d0b8acf5785c52011886ffe7e937180c65a4f47891465596254ac7b79fae380cba64bf53e0aa34426f726b53c98eb476990d31f31cccc0756b26e7a058539a
+EBUILD gitlab-workhorse-3.0.0.ebuild 1019 SHA256 c7bffd0014cc64cc92eeb3566d3af38619bb29ccb5b8d755eb3e86d66c088ea0 SHA512 32a35851126f109da9a3ac12b43ae5b654193d7b4fd0b03fa501d810e1cddf03ae0f4004aedf2d9d98ccda7ca99e689e55f67dda19748bf47e76259b5416575c WHIRLPOOL e0c4403800788d653fcaaf827251771f621ccad15633728b731b52c278b2b33b39321356b2620110597dceb18c2754c460d78685f5a79ef6afda030f2aab24fb
+MISC ChangeLog 7364 SHA256 1201f257e1f27e1ad998346e9ca64e3ee5a010c1d5525f5a3ddbf0468daa7df4 SHA512 954f059e8fc735abbc463a6a55e084092523384ce64aa157a6aefd94d1ee938414a8e5c20dc4163781ae4781d255cd9378a0afde3a5036e0028cadee987fdad0 WHIRLPOOL f5b327abbae59e6672ebfd4ff229713ff38618752f847432914d2aa227798b25d901dad395e51ebb8ba9aed41f2df5a7d71eefa46a2ac3d28e4bef22cc72ce10
 MISC metadata.xml 248 SHA256 7b43be15755627edf5c12cf1b50c607d781558640bf8375d685d51d7ade99a32 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2 WHIRLPOOL 993013c9878ead35469db13d3072f694a341ee654182e0c31d0678f5dd6de4bdc8d59a0b7bb6d685dc41ea6b55dac518cd8034131baea8002170c680e50304d1
